sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:6: error: illegal start of simple expression
  for (i<-0 to n-1)) {
                   ^